# fastapi_experiment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  index.html  messages.pot  mongod.conf  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_08_02_2156-a4349b22d55a_initial_migration.py  2025_08_02_2207-10097fe483c9_add_desc_to_products.py  2025_08_02_2253-12ad22d700fd_add_status_enum_to_product.py  2025_08_02_2322-7de4e7e8fb64_add_status_deprectead_enum_to_product.py  2025_08_02_2327-a2_featured_add_is_featured_flag.py  2025_08_02_2330-b2_description_alter_description_to_text.py  2025_08_02_2342-cedafc6780b8_b2_and_a2_merge.py  2025_08_06_2029-ed00a9e10314_add_todo_table_with_ref_to_user.py  2025_08_10_1734-3679c5721d25_add_roles_to_user.py
app/: babel.py  crud.py  db.py  docs.py  exceptions.py  main.py  rbac.py  router.py  security.py  test.py  utils.py
app/core/: config.py  logger.py
app/models/: __init__.py  base.py  product.py  refresh.py  schemas.py  todo.py  user.py
app/sub_app/: api_2.py
app/todo/: analytics.py  crud.py  schema.py  views.py
app/user/: auth.py  crud.py  schema.py  views.py
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
redis_cleaner/: cleaner.py
tests/: conftest.py  test_example.py  test_main.py
tests/todo/: test_todo.py
tests/user/: test_auth.py  test_crud.py
