#pyproject.toml

[project]
name = "fastapi-1"
version = "0.1.0"
description = ""
authors = ["lofi"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "environs (>=14.2.0,<15.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = [".", "app"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
asyncio_mode = "auto"
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["venv", "alembic", "docker", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501",'B008','B904']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"